set (sources
        mod_version.f08
        mod_global_variables.f08
        dataIO/mod_painting.f08
        mod_equilibrium_params.f08
        dataIO/mod_exceptions.f08
        dataIO/mod_logging.f08
        dataIO/mod_console.f08
        settings/physics/mod_flow_settings.f08
        settings/mod_settings.f08
        settings/mod_dims.f08
        settings/mod_io_settings.f08
        settings/mod_solver_settings.f08
        settings/mod_physics_settings.f08
        settings/mod_grid_settings.f08
        settings/mod_equilibrium_settings.f08
        mod_physical_constants.f08
        utils/mod_get_indices.f08
        matrices/datastructure/mod_matrix_node.f08
        matrices/datastructure/mod_matrix_row.f08
        matrices/datastructure/mod_matrix_structure.f08
        matrices/datastructure/mod_banded_matrix.f08
        matrices/datastructure/mod_banded_matrix_hermitian.f08
        matrices/datastructure/mod_banded_operations.f08
        matrices/datastructure/mod_transform_matrix.f08
        mod_units.f08
        mod_grid.f08
        mod_types.f08
        mod_check_values.f08
        mod_spline_functions.f08
        mod_interpolation.f08
        mod_integration.f08
        dataIO/mod_input.f08
        physics/mod_resistivity.f08
        physics/mod_cooling_curves.f08
        physics/mod_atmosphere_curves.f08
        physics/mod_solar_atmosphere.f08
        physics/mod_radiative_cooling.f08
        physics/mod_thermal_conduction.f08
        physics/mod_hall.f08
        mod_inspections.f08
        mod_equilibrium.f08
        equilibria/smod_equil_adiabatic_homo.f08
        equilibria/smod_equil_constant_current.f08
        equilibria/smod_equil_coronal_flux_tube.f08
        equilibria/smod_equil_discrete_alfven.f08
        equilibria/smod_equil_flow_driven_instabilities.f08
        equilibria/smod_equil_gold_hoyle.f08
        equilibria/smod_equil_gravito_acoustic.f08
        equilibria/smod_equil_gravito_mhd.f08
        equilibria/smod_equil_interchange_modes.f08
        equilibria/smod_equil_internal_kink_instability.f08
        equilibria/smod_equil_isothermal_atmosphere.f08
        equilibria/smod_equil_kelvin_helmholtz_cd.f08
        equilibria/smod_equil_KHI.f08
        equilibria/smod_equil_magnetothermal_instabilities.f08
        equilibria/smod_equil_MRI_accretion.f08
        equilibria/smod_equil_photospheric_flux_tube.f08
        equilibria/smod_equil_resistive_homo.f08
        equilibria/smod_equil_resistive_tearing.f08
        equilibria/smod_equil_resistive_tearing_flow.f08
        equilibria/smod_equil_resonant_absorption.f08
        equilibria/smod_equil_rotating_plasma_cylinder.f08
        equilibria/smod_equil_RTI.f08
        equilibria/smod_equil_RTI_KHI.f08
        equilibria/smod_equil_RTI_theta_pinch.f08
        equilibria/smod_equil_suydam_cluster.f08
        equilibria/smod_equil_couette_flow.f08
        equilibria/smod_equil_taylor_couette.f08
        equilibria/smod_equil_harris_sheet.f08
        equilibria/smod_equil_tc_pinch.f08
        ${USR_SMOD_LOC}/smod_user_defined.f08
        boundaries/mod_boundary_manager.f08
        boundaries/smod_essential_boundaries.f08
        boundaries/smod_natural_boundaries.f08
        boundaries/smod_natural_bounds_regular.f08
        boundaries/smod_natural_bounds_flow.f08
        boundaries/smod_natural_bounds_resistive.f08
        boundaries/smod_natural_bounds_conduction.f08
        boundaries/smod_natural_bounds_viscosity.f08
        boundaries/smod_natural_bounds_hall.f08
        matrices/mod_matrix_shortcuts.f08
        matrices/mod_make_subblock.f08
        matrices/mod_matrix_manager.f08
        matrices/smod_regular_matrix.f08
        matrices/smod_flow_matrix.f08
        matrices/smod_resistive_matrix.f08
        matrices/smod_cooling_matrix.f08
        matrices/smod_conduction_matrix.f08
        matrices/smod_viscosity_matrix.f08
        matrices/smod_hall_matrix.f08
        solvers/arnoldi/mod_arpack_type.f08
        solvers/mod_linear_systems.f08
        solvers/mod_solvers.f08
        solvers/smod_qr_invert.f08
        solvers/smod_qr_cholesky.f08
        solvers/smod_qz_direct.f08
        solvers/arnoldi/smod_arpack_main.f08
        solvers/arnoldi/smod_arpack_general.f08
        solvers/arnoldi/smod_arpack_shift_invert.f08
        solvers/smod_inverse_iteration.f08
        eigenfunctions/mod_eigenfunctions.f08
        eigenfunctions/smod_ef_operations.f08
        eigenfunctions/smod_base_efs.f08
        eigenfunctions/smod_derived_efs.f08
        eigenfunctions/smod_derived_pp_efs.f08
        dataIO/mod_output.f08
        utils/mod_assert.f08
        utils/mod_timing.f08
)

include_directories(includes)
set_source_files_properties(${sources} PROPERTIES LANGUAGE Fortran)
set_source_files_properties(main.f08 PROPERTIES LANGUAGE Fortran)

set(LIBSTOLINK
    ${ARPACK_LIBRARIES}
    ${PARPACK_LIBRARIES}
#    ${MUMPS_LIBRARIES}
#    ${SCALAPACK_LIBRARIES}
    ${LAPACK_LIBRARIES}
    ${BLAS_LIBRARIES}
)

add_library(${LEGOLASLIB} ${sources})
add_executable(${LEGOLASEXEC} main.f08)
target_link_libraries(${LEGOLASEXEC} ${LEGOLASLIB} ${LIBSTOLINK})
